[USLFACT-0004]: Add screenshots in README.md.

--- a/frontends/alns-deubnk-uselessfacts-angular/src/app/layout/footer/footer.component.html
+++ b/frontends/alns-deubnk-uselessfacts-angular/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary" class="footer">
   <span class="spacer"></span>
-  <div style="font-family: 'Roboto Thin',system-ui; font-size: small">© 2025 Deutsche Bank Recruiting :: Home Task :: Senior Full-Stack Engineer position :: Andre Nascimento</div>
+  <div style="font-family: 'Roboto Thin',system-ui; font-size: small">© 2025 Company XPTO Recruiting :: Home Task :: Some Nice position :: By: Andre Nascimento</div>
 </mat-toolbar>
