--- a/frontends/alns-deubnk-uselessfacts-angular/src/app/layout/header/header.component.html
+++ b/frontends/alns-deubnk-uselessfacts-angular/src/app/layout/header/header.component.html
@@ -24,7 +24,7 @@
   <span class="spacer"></span>
 
   <div class="title">
-    <span>Deutsche Bank :: Useless Facts App</span>
+    <span>Company XPTO :: Useless Facts App</span>
   </div>
 
   <div style="">
