--- a/frontends/alns-deubnk-uselessfacts-angular/src/app/uselessfacts/components/public/facts-dashboard.component.html
+++ b/frontends/alns-deubnk-uselessfacts-angular/src/app/uselessfacts/components/public/facts-dashboard.component.html
@@ -84,7 +84,7 @@
 
     <div class="operations">
       <button mat-raised-button (click)="fetchOneUselessFact()">Fetch 1 Random Useless Fact</button>
-      <button mat-raised-button (click)="createBulkFacts(10)">Create (Fetch) 10 Useless Facts</button>
+      <button mat-raised-button (click)="createBulkFacts(10)">Fetch 10 Random Useless Facts</button>
     </div>
 
   </mat-grid-tile>
