--- a/frontends/alns-deubnk-uselessfacts-angular/src/app/layout/header/header.component.scss
+++ b/frontends/alns-deubnk-uselessfacts-angular/src/app/layout/header/header.component.scss
@@ -2,6 +2,13 @@ mat-toolbar {
   position: fixed;
   top: 0;
   width: 100%;
+  background-color: darkgoldenrod;
+  color: white;
+}
+
+mdc-button__label {
+  color: white;
+  background-color: lightyellow;
 }
 
 .spacer {
